# neic-catalog-separation

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  code.json  install.sh  pyproject.toml
catalog_sep/Input/: szt.txt
catalog_sep/Input/Slab2Catalogs/: car_04-18_input.csv  him_04-18_input.csv  hin_04-18_input.csv  mak_04-18_input.csv  man_04-18_input.csv  pam_04-18_input.csv  png_04-18_input.csv  puy_04-18_input.csv  ryu_04-18_input.csv  sco_04-18_input.csv  sul_04-18_input.csv  van_04-18_input.csv
catalog_sep/Input/config/: subduction.conf
catalog_sep/Input/crust1.0/: depthtomoho.grd
catalog_sep/Slab2/: sol_slab2_sup.csv
catalog_sep/src/: calculate_bValue.py  classify_catalog.py  classify_catalog_Funcs.py  classify_catalog_ParallelLoop.py
catalog_sep/src/test/: determine_closest_slab_test.py  determine_quality_test.py  end_to_end_test.py  get_kagan_angle_test_.py  get_probability_test.py  get_seismogenic_depth_test.py  get_slab_moho_info_test.py  overturned_slab_test.py
catalog_sep/src/test/test_data/: cas_input_test.csv  cas_separated_test_output.csv
catalog_sep/src/utils/: get_mt.py  separate_csv.py
